<resources>
    <string name="app_name">mobil-vizora</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="email">Email cím</string>
    <string name="password">Jelszó</string>
    <string name="cancel">Vissza</string>
    <string name="password_again">Jelszó újra</string>
    <string name="noti">Értesítés</string>
    <string name="desc">Értesítések megjelenítése</string>
</resources>